    # An issue with escaped characters in dialog title has been fixed.
    # An issue when removing a file with inner edition has been fixed (backported from 2.1)
    # Apps:
        * Billing :
            - When a billing document is created/edited, & the source has exactly one PaymentInformation, this one is automatically linked to the document.
            - The LateX templates have been fixed :
                - The issuing date is now displayed.
                - In Invoices, the settlement terms set in the entity is now used instead of hard-coded label.
                - The display of the total (exclusive of tax) for lines has now 2 decimal places.

  Developers side :
  -----------------
    Non breaking changes :
    ----------------------
        # In JavaScript :
          - The property "title" of 'creme.dialog.Dialog' is now unescaped (issue #64 in trunk).


== Version 2.0.16 ==

  Users side :
  ------------
    # A deep-copy bug in 'creme_core.forms.header_filter.EntityCellsField' has been fixed ;
      it could cause issues with hidden fields when editing list-views views (HeaderFilters).
    # Values of decimal CustomFields are now localized in list-views.
    # The error message, when a definitive deletion fails, was partially broken.
    # In "About" page, information are retrieved from GIT instead of HG.
    # Apps :
        * Reports :
            - The export for some types of CustomField was broken (multi-enum) or not localized (datetime, bool, decimal).
            - Aggregates are now localized in exported reports.
        * Billing :
            - The orders of InvoiceStatus were not correct in populate script.


== Version 2.0.15 ==

  Users side :
  ------------
    # Apps :
        * Persons :
            - The blocks for detailed addresses have been fixed: they did not display fields since python3 migration.
        * Billing :
            - An encoding issue in PDF export, causing error 500 on some environments, has been fixed.