@@ -22,6 +22,7 @@
     # Apps:
         * Billing :
             - When a billing document is created/edited, & the source has exactly one PaymentInformation, this one is automatically linked to the document.
+            - When a PaymentInformation is created from a billing document, it is automatically linked to the document.
             - The LateX templates have been fixed :
                 - The issuing date is now displayed.
                 - In Invoices, the settlement terms set in the entity is now used instead of hard-coded label.
